fix instagram row images on safari - this also fixed a bug in ie where the insta row on sm screens had much larger height than the content

--- a/src/styles/components/mm/components/_audience.scss
+++ b/src/styles/components/mm/components/_audience.scss
@@ -699,6 +699,7 @@
             margin:0.9375rem 0;
             display:flex;
             flex-wrap:wrap;
+            align-items: flex-start;
             justify-content: space-between;
             line-height:1;
             flex: 0 1 auto;
@@ -707,6 +708,7 @@
           width:15.6%;
           height:auto;
           display:flex;
+          align-items: flex-start;
             img{
                 width:100%;
                 height:auto;
